# fabric-ovirt

./: .gitignore  .gitreview  README.md  README.rst  requirements.txt  setup.cfg  stdci.yaml  test-requirements.txt  tox.ini
automation/: build-artifacts.packages  build-artifacts.repos  build-artifacts.sh  check-merged.packages  check-patch.packages  check-patch.sh
fabric_ovirt/: cmd.py  config.py  fabfile.py
fabric_ovirt/do/: __init__.py  vm_images.py
fabric_ovirt/do/ovirt/: __init__.py  query.py  template.py  vm.py  vmpool.py
fabric_ovirt/do/system/: __init__.py  distro.py  hostname.py  net.py  ntp.py  sanlock.py
fabric_ovirt/do/virt/: __init__.py
fabric_ovirt/lib/: foreman.py  html.py  mockups.py  parallel.py  remote_files.py  remote_images.py  remote_tempfile.py  shell_cmd.py  topbygroup.py  units.py  utils.py
fabric_ovirt/lib/ovirt/: __init__.py
fabric_ovirt/lib/virt/: __init__.py  command_file.py
fabric_ovirt/on/: __init__.py  foreman.py  range.py
fabric_ovirt/on/ovirt/: __init__.py  host.py
test/fabric_ovirt/do/: test_virt.py
test/fabric_ovirt/lib/: test_html.py  test_mockups.py  test_remote_files.py  test_remote_images.py  test_remote_tempfile.py  test_shell_cmd.py  test_topbygroup.py  test_utils.py
test/fabric_ovirt/lib/virt/: test_command_file.py
