[metadata]
name = fabric-ovirt
author = oVirt Infrastructure Team
author_email = infra@ovirt.org
summary = Handle multiple remote hosts in parallel
description-file = README.rst
license = GNU GPLv2
home-page = https://gerrit.ovirt.org/gitweb?p=fabric-ovirt.git;a=shortlog;h=HEAD
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License version 2.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    fabric_ovirt

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    fab-ovirt=fabric_ovirt.cmd:main
    ofab=fabric_ovirt.cmd:main
    ovirt-fabric=fabric_ovirt.cmd:main

[flake8]
# ignore line break before operator
ignore = W503
